[package]
name = "stb-sys"
version = "0.1.0"
authors = ["Maksym Pavlenko <pavlenko.maksym@gmail.com>"]
edition = "2018"
links = "stb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
stb_easy_font = []

[build-dependencies]
bindgen = "0.54"
cc = "1.0"
