[package]
name = "stb-sys"
version = "0.4.1"
authors = ["Maksym Pavlenko <pavlenko.maksym@gmail.com>"]
edition = "2018"
links = "libstb"
repository = "https://github.com/mxpv/stb"
documentation = "https://docs.rs/stb-sys"
description = "Low level bindgen generated wrappers for stb libraries"
license = "MIT"
categories = ["api-bindings", "parsing", "rendering::data-formats", "game-development"]
keywords = ["stb", "gamedev"]
readme = "README.md"
include = [
    "src/",
    "build.rs",
    "vendor/stb/*.*",
]

[features]
stb_easy_font = []

stb_dxt = []
stb_dxt_use_rounding_bias = []

stb_image = []
stbi_no_linear = []
stbi_no_jpeg = []
stbi_no_png = []
stbi_no_bmp = []
stbi_no_psd = []
stbi_no_gif = []
stbi_no_hdr = []
stbi_no_pic = []
stbi_no_pnm = []

stb_image_write = []

stb_perlin = []

stb_rect_pack = []

[build-dependencies]
bindgen = "0.54"
cc = "1.0"
