[package]
name = "stb"
version = "0.1.0"
authors = ["Maksym Pavlenko <pavlenko.maksym@gmail.com>"]
edition = "2018"

[dependencies]
stb-sys = { path = "../stb-sys" }

[features]
default = ["stb_easy_font", "stb_dxt"]
stb_easy_font = ["stb-sys/stb_easy_font"]
stb_dxt = ["stb-sys/stb_dxt"]
stb_dxt_use_rounding_bias = ["stb-sys/stb_dxt_use_rounding_bias"]
